# FormatMaster

./: .gitignore  CHANGELOG.md  ICONS_SHOWCASE.md  LICENSE  MOBILE_OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_格式差异对比工具.md  SIMILARITY_METRICS.md  TROUBLESHOOTING.md  check_output.docx  compare_real_content.py  final_verification.docx  format_diff_server.py  format_diff_viewer_standalone.html  precise_diff_analysis.py  pyproject.toml  run_restoration.py  task_completed.docx  verification_test.docx  verify_current_code.docx
.github/workflows/: release.yml  test-windows.yml
docs/: Web版开发总结.md  usage.md  web_design.md  历史记录功能总结.md  需求文档_Word格式还原工具.md
examples/: 正常格式.docx
scripts/: diff_xml.py  unpack_docx.py
src/restorer/: __init__.py  cli.py  comparer.py  core.py
tests/: __init__.py
web/: FINAL_TEST_REPORT.md  FormatMaster.spec  QUICKSTART.md  README.md  convert  diagnose_exe.py  hook-lxml.py  main.py  main.py.backup  main.py.bak  main.py.broken3  main.py.fixed  requirements.txt  start.sh  start_server.sh  test_exe.py  test_workflow.sh
web/data/: history.json  templates.json
web/static/css/: style.css
web/static/js/: app.js  history.js  integrated.js  manage.js
web/static/uploads/: 9a2642d3-7d37-480d-8176-494fd9cf42a2_旭诚购销合同模板_V3.3_250814.docx  9a2642d3-7d37-480d-8176-494fd9cf42a2_旭诚购销合同模板_V3.3_250814_20260112_173107.docx  9ba7268e-de3d-4ca9-8bcb-724e89461206_错乱格式.docx  9ba7268e-de3d-4ca9-8bcb-724e89461206_错乱格式_20260112_172349.docx
web/static/uploads/compare_b85d9390/: 正常格式.docx
web/template_files/e940785b-9e07-4f27-baff-c79707281f44_正常格式.docx_temp/: [Content_Types].xml
web/template_files/e940785b-9e07-4f27-baff-c79707281f44_正常格式.docx_temp/docProps/: app.xml  core.xml
web/templates/: history.html  icons-preview.html  index.html  manage.html
(+14 files in other folders)
